# dockergym

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/add-environment/: SKILL.md
.claude/skills/add-environment/templates/: Dockerfile  README.md  __main__.py  app.py  example.py  worker_base.py  worker_custom.py
dockergym/: __init__.py  __main__.py  app.py  batcher.py  config.py  errors.py  models.py  routes.py  session_manager.py  worker.py
dockergym/envs/: __init__.py
dockergym/envs/alfworld/: Dockerfile  README.md  __init__.py  __main__.py  app.py  base_config.yaml  example.py  requirements.txt  worker.py
dockergym/envs/scienceworld/: Dockerfile  README.md  __init__.py  __main__.py  app.py  example.py  worker.py
